2000-11-15  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_decode_contents): New convenience
	function to decode the contents of a mime part (based on code by
	Wayne Schuller).

2000-11-14  Jeffrey Stedfast  <fejj@helixcode.com>

	* doc/html/index.sgml: Added - apparently we need this :-)

	* doc/Makefile.am: Updated to pass distcheck

2000-11-10  Jeffrey Stedfast  <fejj@helixcode.com>

	* doc/gmime-docs.sgml: Added a new paragraph explaining the
	difference between functions that return const and the ones that
	don't.
	
	* doc/html/*.html: Updated.

	* gmime-message.c: 
	* gmime-part.c: 
	* gmime-parser.c: 
	* internet-address.c: 
	* gmime-param.c: Updated Gtk-Doc comments.

	* gmime-content-type.c: Wrote Gtk-Doc comments.

2000-11-10  Jeffrey Stedfast  <fejj@helixcode.com>
	
	* Makefile.am (SUBDIRS): Added doc

	* configure.in: Generate doc/Makefile

	* doc/Makefile.am: Ignore more headers when performaing
	gtkdoc-scan.

	* doc/gmime-docs.sgml:
	* doc/gmime-sections.txt: Added.

	* doc/html/*.html: Generated library reference.

2000-11-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* TODO: Updated.

	* test-mime.c: Added test of the new quote/unquote functions.
	
	* gmime-message.c (g_mime_message_add_recipients_from_string):
	Check for escaped quotes.
	
	* gmime-part.c (get_content_type): Correctly quote params.
	(get_content_disposition): Same.

	* gmime-param.c (g_mime_param_new_from_string): Check for escaped
	quotes. Also use unquote_string() to unquote the value.
	(g_mime_param_to_string): Correctly quote the value.

	* gmime-parser.c (get_mime_part): Check for escaped quotes and
	correctly unquote strings where appropriate.

	* gmime-utils.c (g_mime_utils_quote_string): New convenience
	function to escape and quote a string.
	(g_mime_utils_unquote_string): New convenience function to
	un-escape and un-quote a string.

	* internet-address.c (encoded_name): Use quote_string().
	(internet_address_new): Use unquote_string() to unquote and